[workspace]
resolver = "2"
members = [
    "src/mio_srv",
    "src/tokio_srv",
    "src/cli",
]

[workspace.package]
authors = ["Gris Ge <fge@redhat.com>"]
rust-version = "1.85"
version = "0.0.1"
license = "Apache-2.0"
edition = "2024"

[workspace.dependencies.mio]
version = "1.0"
features = ["os-poll", "os-ext", "net"]

[workspace.dependencies.tokio]
version = "1.45"
features = ["rt", "rt-multi-thread", "net", "time", "macros", "io-util"]

[workspace.dependencies.nix]
version = "0.30"
features = ["time"]
